src/preferences/screen/Constants.h
@@ -10,6 +10,7 @@
 #define CONSTANTS_H
 
 
+#include <ScreenDefs.h>
 #include <SupportDefs.h>
 
 
@@ -30,7 +31,8 @@ static const uint32 POP_COMBINE_DISPLAYS_MSG = 'pcdi';
 static const uint32 POP_SWAP_DISPLAYS_MSG = 'psdi';
 static const uint32 POP_USE_LAPTOP_PANEL_MSG = 'pulp';
 static const uint32 POP_TV_STANDARD_MSG = 'ptvs';
-static const uint32 UPDATE_DESKTOP_COLOR_MSG = 'udsc';
+//static const uint32 UPDATE_DESKTOP_COLOR_MSG = 'udsc';
+	// This is now defined in headers/private/preferences/ScreenDefs.h
 static const uint32 UPDATE_DESKTOP_MSG = 'udsk';
 static const uint32 SLIDER_MODIFICATION_MSG = 'sldm';
 static const uint32 SLIDER_INVOKE_MSG = 'sldi';
